--- a/views/header.css
+++ b/views/header.css
@@ -203,7 +203,7 @@ input[type=text], input[type=password], input[type=text] {
 
 
 body  {
-    background-image: url("http://www.hitra-froya.no/incoming/article11464333.ece/paepd8/ALTERNATES/w980-default/Fotball.jpg");
+   background-image: url("http://cdn.wallpapersafari.com/37/97/RDSUQr.jpg");
     background-color: #6b6a6a;
 	 background-blend-mode: multiply;
 	background-size: 100% auto;
