--- a/views/header.css
+++ b/views/header.css
@@ -301,7 +301,7 @@ input[type=text], input[type=password], input[type=text] {
 
 
 body  {
-   background-image: url("http://cdn.wallpapersafari.com/37/97/RDSUQr.jpg");
+   background-image: url("http://cdn.tvguide.co.uk/_ui/images/champions-league/BG.jpg");
     background-color: #6b6a6a;
 	 background-blend-mode: multiply;
 	background-size: 100% auto;
