--- a/css/header.css
+++ b/css/header.css
@@ -283,7 +283,7 @@ fieldset {
 	display: block; 
 	}
 legend {
-        margin-left: 45px;
+        	margin-left: 42%;
 		padding: 4px 6px 4px 6px;
 		border: 1px solid white;
 		font-size: 1.5em;
@@ -295,6 +295,7 @@ legend {
 	padding: 10px;
 	color: white;
 	white-space: nowrap;
+	margin-left: 10%;
 }
 span.total-votes {
 	font-size: 2.6em;
