--- a/css/header.css
+++ b/css/header.css
@@ -283,7 +283,10 @@ fieldset {
 	display: block; 
 	}
 legend {
-        	margin-left: 42%;
+        	width:40%;
+        	margin-left: 30%;
+        	margin-right:auto;
+    		text-align: center;
 		padding: 4px 6px 4px 6px;
 		border: 1px solid white;
 		font-size: 1.5em;
